--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css">
-		<script src="https://kit.fontawesome.com/27863d48fd.js" crossorigin="anonymous"></script>
-
 		<title>Enciptador de texto</title>
 	</head>
 
@@ -27,7 +25,7 @@
 
 		</section>
         <section>
-            <img class="logo" src="/images/logo.png" alt="logo de Alura">
+            <img class="logo" src="/images/alura_final-removebg-preview.png" alt="logo de Alura">
         </section>
 
 	</body>
@@ -36,7 +34,7 @@
 
 		<div class="social_media_icons">
 
-			<p>Powered by Cristian Merlo & Alura - 2023</p>
+			<p>Encriptador Challenge Powered by Cristian Merlo & Alura - 2023</p>
 
 		</div>
 	  
