--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/reset.css/reset.css">
 		<link rel="stylesheet" href="style.css">
 		<title>Enciptador de texto</title>
 	</head>
@@ -25,7 +26,7 @@
 
 		</section>
         <section>
-            <img class="logo" src="/images/alura_final-removebg-preview.png" alt="logo de Alura">
+            <img class="logo" src="images/alura_final-removebg-preview.png" alt="logo de Alura">
         </section>
 
 	</body>
